Modificar menu, crear categorias independientes de activitys para, conexion a la base de datos (postgres y revisisar todo el tema de los diseños para el main menu, y revisar traducciones.

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -21,7 +21,7 @@
     </group>
 
 
-    <item android:title="Profile">
+    <item android:title="Perfil">
         <menu>
 
             <group android:checkableBehavior="single">
@@ -42,7 +42,7 @@
         </menu>
     </item>
 
-    <item android:title="Categories">
+    <item android:title="Categorias">
         <menu>
 
             <group android:checkableBehavior="single">
@@ -62,12 +62,13 @@
                     android:id="@+id/nav_shop"
                     android:title="@string/ausencias"
                     android:icon="@drawable/ausencias_24"/>
+
             </group>
 
         </menu>
     </item>
 
-    <item android:title="Share">
+    <item android:title="Compartir">
         <menu>
 
             <group android:checkableBehavior="none">
