--- a/app/src/main/res/layout/activity_all_categories.xml
+++ b/app/src/main/res/layout/activity_all_categories.xml
@@ -96,11 +96,7 @@
                 android:layout_height="150dp"
                 android:background="@drawable/categories_restaurant_background">
 
-                <ImageView
-                    android:layout_width="120dp"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/categories_restaurant_icon"
-                    android:layout_marginLeft="20dp"/>
+
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -139,7 +135,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/hospitals"
+                    android:text="Prueba"
                     android:textSize="30sp"
                     android:fontFamily="@font/baloo"
                     android:textColor="@color/white"
@@ -157,12 +153,7 @@
 
             </RelativeLayout>
 
-            <ImageView
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:src="@drawable/hospital_image"
-                android:layout_marginTop="-15dp"
-                android:layout_alignParentRight="true"/>
+
 
         </RelativeLayout>
 
@@ -178,11 +169,6 @@
                 android:layout_height="150dp"
                 android:background="@drawable/categories_shops_background">
 
-                <ImageView
-                    android:layout_width="120dp"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/categories_shop_icon"
-                    android:layout_marginLeft="20dp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -260,16 +246,10 @@
                 android:layout_height="150dp"
                 android:background="@drawable/categories_restaurant_background">
 
-                <ImageView
-                    android:layout_width="120dp"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/categories_restaurant_icon"
-                    android:layout_marginLeft="20dp"/>
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/car_rent"
+                    android:text="Prueba"
                     android:textSize="30sp"
                     android:fontFamily="@font/baloo"
                     android:textColor="@color/white"
@@ -303,7 +283,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/hospitals"
+                    android:text="Pruebas"
                     android:textSize="30sp"
                     android:fontFamily="@font/baloo"
                     android:textColor="@color/white"
