--- a/app/src/main/res/layout/activity_retailer_login.xml
+++ b/app/src/main/res/layout/activity_retailer_login.xml
@@ -38,31 +38,19 @@
             android:layout_marginTop="80dp">
 
 
-            <com.hbb20.CountryCodePicker
-                android:id="@+id/login_country_code_picker"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/black_border"
-                android:padding="7dp"
-                app:ccp_autoDetectCountry="true"
-                app:ccp_showFlag="true"
-                app:ccp_showFullName="true"
-                app:ccp_showNameCode="true" />
-
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/login_phone_number"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/login_country_code_picker"
-                android:hint="@string/enter_phone_number"
+                android:hint="@string/enter_email"
                 android:textColorHint="@color/black"
                 app:boxStrokeColor="@color/black"
                 app:boxStrokeWidthFocused="2dp"
                 app:endIconMode="clear_text"
                 app:endIconTint="@color/black"
                 app:hintTextColor="@color/black"
-                app:startIconDrawable="@drawable/field_phone_number_icon"
+                app:startIconDrawable="@drawable/field_email_icon"
                 app:startIconTint="@color/black">
 
                 <com.google.android.material.textfield.TextInputEditText
