--- a/app/src/main/res/layout/activity_retailer_start_up_screen.xml
+++ b/app/src/main/res/layout/activity_retailer_start_up_screen.xml
@@ -14,12 +14,12 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:src="@drawable/retailer_circle_black" />
+            android:layout_height="258dp"
+            android:src="@drawable/logo_homsa3" />
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="154dp"
             android:layout_gravity="center"
             android:layout_marginTop="120dp"
             android:fontFamily="@font/muli_black"
